--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,7 @@
 				// 	4
 				// );
 
-				var wrapper = new ProteinViewerWrapper(800, 600, document.getElementById("container"), dat);
+				var wrapper = new ProteinViewerWrapper(800, 600, document.getElementById("container"), demoData);
 
 				// Can customize via ProteinViewer APIs
 				var ptviewer = wrapper.proteinViewer;
