--- a/demo.html
+++ b/demo.html
@@ -7,8 +7,8 @@
 		</style>
 	</head>
 	<body>
-		<script src="./js/three.min.js"></script>
-		<script src="./js/ptviewer.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
+		<script src="http://renchusong.github.io/ProteinViewer/js/ptviewer.js"></script>
 		<script src="./demo_data.js"></script>
 		<div id="container">
 			<script>
