--- a/demo.html
+++ b/demo.html
@@ -40,7 +40,7 @@
 					// );
 					var wrapper;
 					var ptviewer;
-					$.getJSON("./demo_data.json", function(demoData) {
+					$.getJSON("./3MGN.json", function(demoData) {
 					    wrapper = new ProteinViewerWrapper(800, 600, document.getElementById("container"), demoData, 0.3, 1.5);
 
 						// Can customize via ProteinViewer APIs
