--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,9 @@
 	<head>
 		<title>Protein Viewer Demo</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
-		<script src="http://renchusong.github.io/ProteinViewer/js/ptviewer.js"></script>
+		<!--script src="http://renchusong.github.io/ProteinViewer/js/ptviewer.js"></script-->
+		<script src="./js/ptviewer.js"></script>
+		
 		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<style>
 			body { margin: 0; }
@@ -40,8 +42,8 @@
 					// );
 					var wrapper;
 					var ptviewer;
-					$.getJSON("./3MGN.json", function(demoData) {
-					    wrapper = new ProteinViewerWrapper(800, 600, document.getElementById("container"), demoData, 0.3, 1.5);
+					$.getJSON("./demo_data.json", function(demoData) {
+					    wrapper = new ProteinViewerWrapper(800, 600, document.getElementById("container"), demoData, 0.3, 1.5, 10);
 
 						// Can customize via ProteinViewer APIs
 						ptviewer = wrapper.proteinViewer;
